--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-awesome-modal": "^2.0.5",
     "react-big-calendar": "^0.26.0",
     "react-bootstrap": "^1.2.2",
+    "react-confirm-alert": "^2.6.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
